# aws-eks-helm-deploy

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .scorecard-exception.md  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  bitbucket-pipelines.yml  changelog  logo.pxd  mkdocs.yml  pipe.yml  pyproject.toml  requirements.txt  versions.json
.changes/: 1.0.0.json  1.0.1.json  1.0.2.json  1.1.0.json  1.1.1.json  1.1.2.json  1.1.3.json  1.2.0.json  1.2.1.json  1.3.0.json
.changes/next-release/: major-20201101123955.json  minor-20231030140116692937.json  minor-20240223104718653314.json  minor-20240530131414065965.json  patch-20201101125558.json  patch-20201101131049.json  patch-20220208115532593770.json  patch-20220606104654170159.json  patch-20230630192724908757.json  patch-20240530105443065043.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  cosign-verify.yml  dependabot-auto-merge.yml  docs.yml  release-please.yml  release.yml  scorecard.yml  security-rescan.yml
.planning/: PROJECT.md  REQUIREMENTS.md  RESUME-2026-08-v3-LAUNCH.md  ROADMAP.md  STATE.md  config.json
.planning/proposals/: cii-best-practices-answers.md  cii-best-practices-crib.md  scorecard-hardening-sprint.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: build.md  index.md
docs/admin/: repo-settings.md
docs/adr/: 0000-template.md  0001-github-primary-forge.md  0002-v2-clean-break.md  0003-cosign-keyless-over-gpg.md  0004-boto3-only-over-awscli.md  0005-release-please-over-semversioner.md  0006-oidc-default-precedence.md  0007-multi-arch-native-runners.md  0008-mkdocs-material-now-zensical-later.md  0009-src-layout-no-compat-shims.md  0010-helm-v4-migration.md  index.md
docs/guides/: oidc-setup.md  v1-to-v2.md
docs/migration/: v1-to-v2.md  v2-to-v3.md
docs/quickstart/: overview.md
docs/reference/: variables.md
examples/basic/: bitbucket-pipelines.yml
examples/migration-v1-to-v2/: README.md  after.yml  before.yml
examples/multi-env/: bitbucket-pipelines.yml
examples/oci-chart/: bitbucket-pipelines.yml
examples/oidc-only/: bitbucket-pipelines.yml
pipe/: pipe.py  schema.py  test.py  test_schema.py
pipe/eks/: client.py
pipe/helm/: client.py  duration.py  error.py
pipe/templates/: kube.config.j2
scripts/: __init__.py  _trivyignore_parser.py  benchmark-cold-start.sh  check-variables-drift.sh  generate-variables-doc.py  pip-audit-with-stale-check.sh  rescan-issue-creator.py  scorecard-exception-check.py  trivyignore-check.sh
src/aws_eks_helm_deploy/: __init__.py  __main__.py  cli.py  errors.py  logging.py  pipe_io.py  settings.py
test/acceptance/: requirements.txt  test_pipe.py
tests/: conftest.py
tests/acceptance/: conftest.py  test_image_has_cosign.py  test_image_smoke.py
tests/integration/: conftest.py  test_auth_smoke.py  test_chart_sources.py  test_helm_smoke.py  test_upgrade_action.py
tests/structural/: test_adr_template.py  test_benchmark_cold_start.py  test_ci_yml_structure.py  test_code_of_conduct.py  test_contributing.py  test_cosign_verify_yml.py  test_dependabot_config.py  test_docs_yml_structure.py  test_examples_lint.py  test_governance_files.py  test_migration_guide.py  test_mkdocs_build.py  test_readme_polish.py  test_release_please_config.py  test_release_yml_sign_attest.py  test_release_yml_structure.py  test_repo_settings_runbook.py  test_scorecard_exception_grammar.py  test_security_md.py  test_security_rescan_yml.py  test_variables_doc_generator.py  test_workflow_digest_pins.py
tests/unit/: test_assume_role.py  test_auth_base.py  test_auth_init_select_strategy.py  test_auth_oidc.py  test_auth_select.py  test_cli.py  (+25 more)
v1/: 404.html  index.html  sitemap.xml
v2/: 404.html  index.html  sitemap.xml
(+173 files in other folders)
